# bazel-bep

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
proto/: build_event_stream.proto  build_events.proto
proto/google/api/: http.proto
src/: lib.rs  server.rs
