[package]
name = "bazel-bep"
version = "0.2.0"
edition = "2021"
description = "Message definitions for bazel's Build Event Protocol"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10", default-features = false, features = ["codegen", "prost"] }
prost = "0.12"
prost-types = "0.12"


[build-dependencies]
tonic-build = "0.10"
