[package]
name = "bazel-bep"
version = "0.2.2"
edition = "2021"
description = "Message definitions for bazel's Build Event Protocol"
license = "MIT"
repository = "https://github.com/ChristianBelloni/bazel-bep"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10", default-features = false, features = ["codegen", "prost"] }
prost = "0.12"
prost-types = "0.12"


[build-dependencies]
tonic-build = "0.10"

[features]
default = []
client = ["tonic/transport"]
server = []

[badges]
github = { repository = "ChristianBelloni/bazel-bep" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
